
* Added new checker ``use-implicit-booleaness-not-comparison``: Emitted when
  collection literal comparison is being used to check for emptiness.

  Closes #4774

* ``mising-param-doc`` now correctly parses asterisks for variable length and
  keyword parameters

  Closes #3733

* ``mising-param-doc`` now correctly handles Numpy parameter documentation without
  explicit typing

  Closes #5222

* Update ``literal-comparison``` checker to ignore tuple literals

  Closes #3031

* Normalize the input to the ``ignore-paths`` option to allow both Posix and
  Windows paths

  Closes #5194

* Fix double emitting of ``not-callable`` on inferrable ``properties``

  Closes #4426

* Fix ``missing-function-docstring`` not being able to check ``__init__`` and other
  magic methods even if the ``no-docstring-rgx`` setting was set to do so

* Added configuration option ``exclude-too-few-public-methods`` to allow excluding
  classes from the ``min-public-methods`` checker.

  Closes #3370

* The ``--jobs`` parameter now fallbacks to 1 if the host operating system does not
  have functioning shared semaphore implementation.

  Closes #5216

* Fix crash for ``unused-private-member`` when checking private members on ``__class__``

  Closes #5261

* Added new checker ``useless-with-lock`` to find incorrect usage of with statement and threading module locks.
  Emitted when ``with threading.Lock():`` is used instead of ``with lock_instance:``.

  Closes #5208


What's New in Pylint 2.11.2?
============================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here

* Pyreverse - Add the project root directory to sys.path

  Closes #2479

* Don't emit ``consider-using-f-string`` if ``py-version`` is set to Python < ``3.6``.
  ``f-strings`` were added in Python ``3.6``

  Closes #5019

* Fix regression for ``unspecified-encoding`` with ``pathlib.Path.read_text()``

  Closes #5029
