@@ -94,3 +94,20 @@ def func3():
 # Lambda and IfExp
 def func4():
     l = lambda x: y if (y := x) else None
+
+
+# Crash related to assignment expression in nested if statements
+# See https://github.com/PyCQA/pylint/issues/5178
+def func5(val):
+    variable = None
+
+    if val == 1:
+        variable = "value"
+        if variable := "value":
+            pass
+
+    elif val == 2:
+        variable = "value_two"
+        variable = "value_two"
+
+    return variable
